--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html>
 <head>
   <title>You Can Try</title>
+  <meta charset="utf-8" />
+  <style>
+  body {
+    padding: 0;
+    margin: 0;
+  }
+  </style>
   <!-- bower:css -->
   <!-- endbower -->
 </head>
